kubernetes/apps/storage/juicefs-csi/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: juicefs
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
