kubernetes/apps/storage/juicefs-csi/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: juicefs
  namespace: juicefs
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    gatus.home-operations.com/endpoint: |-
      group: storage
      conditions:
        - "[STATUS] == 200"
spec:
  hostnames:
    - "juicefs.${SECRET_DOMAIN}" # yayamlls-disable-line
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: juicefs-csi-dashboard
          port: 8088
